--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,51 @@
+/* GLOBAL */
+
+*,
+::before,
+::after {
+  box-sizing: border-box;
+  max-height: 999999px;
+}
+
+html {
+  background-color: #fff;
+  color: rgba(0,0,0,.8);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 20px;
+  line-height: 1.33;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-tap-highlight-color: transparent;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+
+/* UTILITY CLASSES */
+
+.container {
+  margin: 0 auto;
+}
+
+.centralize {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+/* LOADER */
+
+.loader {
+  height: 100%;
+  left: 0;
+  width: 100%;
+  top: 0;
+  z-index: 999999;
 }
