--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@ body {
   margin: 0;
 }
 
+a {
+  color: #0d47a1;
+}
+
 /* UTILITY CLASSES */
 
 .container {
@@ -40,6 +44,47 @@ body {
   justify-content: center;
 }
 
+.avatar {
+  background-color: #f5f5f5;
+  border-radius: 50%;
+}
+
+.card {
+  background-color: #fff;
+  border: 1px solid rgba(189,189,189,.4);
+  border-radius: 8px;
+  -webkit-box-shadow: 0 -4px 0 0 #1976d2;
+  box-shadow: 0 -4px 0 0 #1976d2;
+  overflow: hidden;
+}
+
+.card-header {
+  background-color: #f5f5f5;
+  border-bottom: 1px solid rgba(189,189,189,.4);
+  padding: 1em;
+}
+
+.card-title {
+  font-size: 1em;
+  margin: 0;
+}
+
+.card-subtitle {
+  font-size: .83em;
+  margin-bottom: 0;
+}
+
+.card-body {
+  border: none;
+  margin: 0;
+  padding: 1em;
+}
+
+.card-footer {
+  font-size: .67em;
+  margin-bottom: 1rem;
+}
+
 /* LOADER */
 
 .loader {
@@ -48,4 +93,124 @@ body {
   width: 100%;
   top: 0;
   z-index: 999999;
+}
+
+/* SIGNIN */
+
+.signin {
+  min-height: 100vh;
+}
+
+.signin-card {
+  margin: 1em;
+  max-width: 425px;
+  min-width: 280px;
+  text-align: center;
+  width: 100%;
+}
+
+.signin-image {
+  width: 33%;
+}
+
+.signin-select {
+  margin-bottom: 1em;
+}
+
+
+
+:focus {
+  outline: none;
+}
+
+button,
+input,
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-style: solid;
+  border-width: 1px;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: 1.5;
+  padding: .6em 1em;
+  width: 100%;
+}
+
+input,
+select {
+  background-color: rgba(238,238,238,.8);
+  border-color: rgba(189,189,189,.8);
+  border-radius: 4px;
+  color: rgba(0,0,0,.8);
+}
+
+input:hover,
+input:focus,
+select:hover,
+select:focus {
+  background-color: #fff;
+  border-color: #fff;
+}
+
+select {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 4"><path d="M0 0l4 4 4-4z" fill="rgba(0,0,0,.8)"/></svg>');
+  background-position: calc(100% - 1em) 50%,50% 100%;
+  background-size: 1em;
+  background-repeat: no-repeat;
+  padding-right: 3em;
+}
+
+/* Remove text focusring in firefox */
+select:-moz-focusring {
+  color: transparent;
+  text-shadow: 0 0 0 rgba(0,0,0,0.8);
+}
+
+/* Remove select element arrow in IE 10+ */
+select::-ms-expand {
+  display: none;
+}
+
+option {
+  background-color: #eee;
+  color: rgba(0,0,0,.8);
+}
+
+option:disabled {
+  color: rgba(0,0,0,.54);
+}
+
+button {
+  background-color: #0d47a1;
+  border-color: #0d47a1;
+  border-radius: 4px;
+  color: #fff;
+}
+
+button:hover,
+button:focus {
+  background-color: #1565c0;
+  border-color: #1565c0;
+  cursor: pointer;
+}
+
+button:hover,
+button:focus,
+input:hover,
+input:focus,
+select:hover,
+select:focus {
+  -webkit-box-shadow: 0 0 0 4px rgba(33,150,243,.8);
+  box-shadow: 0 0 0 4px rgba(33,150,243,.8);
+}
+
+button:disabled,
+button:disabled:hover,
+button:disabled:focus {
+  background-color: #bdbdbd;
+  border-color: #bdbdbd;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
