--- a/src/index.css
+++ b/src/index.css
@@ -44,10 +44,24 @@ a {
   justify-content: center;
 }
 
+.circle-icon-button {
+  color: transparent;
+  background-position: .76em 50%,50% 100%;
+  background-repeat: no-repeat;
+  background-size: 1.2em;
+  border-radius: 50%;
+  border-style: solid;
+  border-width: 1px;
+  height: 2.8em;
+  width: 2.8em;
+}
+
 .avatar {
   background-color: #f5f5f5;
   border-radius: 50%;
 }
+
+/* CARD */
 
 .card {
   background-color: #fff;
@@ -213,4 +227,126 @@ button:disabled:focus {
   border-color: #bdbdbd;
   -webkit-box-shadow: none;
   box-shadow: none;
+}
+
+/* NAVBAR */
+
+.navbar {
+  border-bottom: 1px solid rgba(189,189,189,.4);
+  position: fixed;
+  width: 100%;
+}
+
+.navbar nav {
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.navbar ul,
+.greetings,
+.logout {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+}
+
+.navbar ul {
+  list-style: none;
+  margin: 0 1em;
+  order: 1;
+  padding: 0;
+  width: 100%;
+}
+
+.navbar a {
+  display: block;
+  font-size: .83em;
+  height: 2.8rem;
+  line-height: 2.8rem;
+  padding: 0 .5rem;
+  text-decoration: none;
+}
+
+.navbar a:hover,
+.navbar a:focus {
+  background-color: rgba(238,238,238,.8);
+}
+
+.active-navlink {
+  border-bottom: .5em solid rgba(189,189,189,.4);
+}
+
+.navbar-avatar {
+  height: 2.8rem;
+  margin-right: 1em;
+  order: -1;
+}
+
+.greetings {
+  font-size: .83em;
+  margin: .5rem auto .5rem 1rem;
+}
+
+.greetings span {
+  display: none;
+}
+
+.logout {
+  background-color: rgba(238,238,238,.8);
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18"><path fill="rgba(0,0,0,.8)" d="M7.09 12.59L8.5 14l5-5-5-5-1.41 1.41L9.67 8H0v2h9.67zM18 0H0v6h2V2h14v14H2v-4H0v6h18z"/></svg>');
+  border: 1px solid rgba(189,189,189,.8);
+  margin: .5em 1em;
+  overflow: hidden;
+}
+
+.logout:hover,
+.logout:focus {
+  background-color: #fff;
+  border-color: #fff;
+  -webkit-box-shadow: 0 0 0 4px rgba(33,150,243,.8);
+  box-shadow: 0 0 0 4px rgba(33,150,243,.8);
+}
+
+@media (min-width: 640px) {
+  .navbar ul {
+    margin: 0 auto 0 1em;
+    order: 0;
+    width: auto;
+  }
+
+  .navbar a {
+    height: 3.8rem;
+    line-height: 3.8rem;
+  }
+
+  .navbar-avatar {
+    margin-left: 1em;
+    margin-right: 0;
+    order: 0;
+  }
+
+  .greetings {
+    margin: .5rem 0 .5rem 1rem;
+  }
+
+  .greetings span {
+    display: inline;
+    margin-right: .5em;
+  }
+}
+
+@media (min-width: 768px) {
+  .navbar a,
+  .greetings {
+    font-size: 1em;
+  }
+
+  .navbar a {
+    padding: 0 1em;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
 }
