--- a/src/index.css
+++ b/src/index.css
@@ -268,11 +268,11 @@ button:disabled:focus {
 
 .navbar a:hover,
 .navbar a:focus {
-  background-color: rgba(238,238,238,.8);
+  background-color: #f5f5f5;
 }
 
 .active-navlink {
-  border-bottom: .5em solid rgba(189,189,189,.4);
+  border-bottom: 3px solid #1976d2;
 }
 
 .navbar-avatar {
