--- a/src/index.css
+++ b/src/index.css
@@ -167,7 +167,13 @@ main {
   margin-bottom: 1em;
 }
 
-
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
 
 :focus {
   outline: none;
