--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
   max-height: 999999px;
 }
 
+:focus {
+  outline: none;
+}
+
 html {
   background-color: #fff;
   color: rgba(0,0,0,.8);
@@ -27,7 +31,218 @@ a {
   color: #0d47a1;
 }
 
-/* UTILITY CLASSES */
+hr {
+  background-color: rgba(189,189,189,.8);
+  border: none;
+  height: 1px;
+  margin: 0;
+  overflow: visible;
+  text-align: center;
+}
+
+/* FORM ELEMENTS */
+
+/* Change the font styles in all browsers */
+button,
+input,
+select {
+  font-family: inherit;
+  font-size: inherit;
+}
+
+/* Correct the inability to style clickable types in iOS and Safari */
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+/* Remove the inner border and padding in Firefox */
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/* Remove text focusring in firefox */
+select:-moz-focusring {
+  color: transparent;
+  text-shadow: 0 0 0 rgba(0,0,0,0.8);
+}
+
+/* Remove select element arrow in IE 10+ */
+select::-ms-expand {
+  display: none;
+}
+
+button,
+label,
+input[type=checkbox],
+input[type=radio],
+select {
+  cursor: pointer;
+}
+
+input,
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: rgba(238,238,238,.8);
+  border-color: rgba(189,189,189,.8);
+  color: rgba(0,0,0,.8);
+}
+
+input:hover,
+input:focus,
+select:hover,
+select:focus {
+  background-color: #fff;
+  border-color: #fff;
+}
+
+.button,
+button,
+input,
+select {
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  line-height: 1.5;
+}
+
+.button,
+button,
+input[type=text],
+select {
+  padding: .6em 1em;
+  width: 100%;
+}
+
+/* SELECT */
+
+select {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 4"><path d="M0 0l4 4 4-4z" fill="rgba(0,0,0,.8)"/></svg>');
+  background-position: calc(100% - 1em) 50%,50% 100%;
+  background-repeat: no-repeat;
+  background-size: 1em;
+  padding-right: 3em;
+}
+
+/* OPTION */
+
+option {
+  background-color: #eee;
+  color: rgba(0,0,0,.8);
+}
+
+option:disabled {
+  color: rgba(0,0,0,.54);
+}
+
+/* BUTTON */
+
+.button {
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+}
+
+.button,
+button {
+  background-color: #0d47a1;
+  border-color: #0d47a1;
+  color: #fff;
+}
+
+.button:hover,
+.button:focus,
+button:hover,
+button:focus {
+  background-color: #1565c0;
+  border-color: #1565c0;
+}
+
+.button:hover,
+.button:focus,
+button:hover,
+button:focus,
+input:hover,
+input:focus,
+select:hover,
+select:focus {
+  -webkit-box-shadow: 0 0 0 4px rgba(33,150,243,.8);
+  box-shadow: 0 0 0 4px rgba(33,150,243,.8);
+}
+
+button:disabled,
+button:disabled:hover,
+button:disabled:focus {
+  background-color: #bdbdbd;
+  border-color: #bdbdbd;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  cursor: not-allowed;
+}
+
+/* RADIO BUTTONS AND CHECKBOXES */
+
+input[type=checkbox],
+input[type=radio] {
+  align-items: center;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  height: 1.33em;
+  justify-content: center;
+  margin: 0 .5em;
+  padding: 0;
+  vertical-align: .1em;
+  width: 1.33em;
+}
+
+input[type="radio"] {
+  border-radius: 50%;
+}
+
+input[type=checkbox]::before,
+input[type=radio]::before {
+  border-color: transparent;
+  border-style: solid;
+  border-width: 0 .2em .2em 0;
+  content: '';
+  display: block;
+  height: 50%;
+  margin-top: -10%;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  width: 28%;
+}
+
+input[type=checkbox]:checked::before,
+input[type=radio]:checked::before {
+  border-color: rgba(27,94,32,.8);
+}
+
+/* FORM UL LI */
+
+form ul {
+  list-style: none;
+  padding: 0;
+}
+
+form ul ul {
+  padding-left: 1em;
+}
+
+form li {
+  margin: 1em 0;
+}
+
+/* LAYOUT CLASSES */
 
 .container {
   margin: 0 auto;
@@ -68,22 +283,28 @@ a {
   align-items: stretch;
 }
 
+/* UTILITY CLASSES */
+
 .small,
 small {
   font-size: 83%;
 }
 
+/* COMPONENT CLASSES */
+
 .circle-icon-button {
-  color: transparent;
   background-position: .76em 50%,50% 100%;
   background-repeat: no-repeat;
   background-size: 1.2em;
   border-radius: 50%;
   border-style: solid;
   border-width: 1px;
+  color: transparent;
   height: 2.8em;
   width: 2.8em;
 }
+
+/* AVATAR */
 
 .avatar {
   background-color: #f5f5f5;
@@ -140,6 +361,7 @@ small {
 }
 
 /* MAIN */
+
 main {
   min-height: 100vh;
   padding: 8.6em 0 2em;
@@ -160,133 +382,11 @@ main {
 }
 
 .card-avatar {
-  width: 33%;
+  max-width: 33%;
 }
 
 .signin-select {
   margin-bottom: 1em;
-}
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-:focus {
-  outline: none;
-}
-
-button,
-input,
-select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  font-family: inherit;
-  font-size: inherit;
-}
-
-.button,
-button,
-input,
-select {
-  border-style: solid;
-  border-width: 1px;
-  line-height: 1.5;
-  padding: .6em 1em;
-  width: 100%;
-}
-
-input,
-select {
-  background-color: rgba(238,238,238,.8);
-  border-color: rgba(189,189,189,.8);
-  border-radius: 4px;
-  color: rgba(0,0,0,.8);
-}
-
-input:hover,
-input:focus,
-select:hover,
-select:focus {
-  background-color: #fff;
-  border-color: #fff;
-}
-
-select {
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 4"><path d="M0 0l4 4 4-4z" fill="rgba(0,0,0,.8)"/></svg>');
-  background-position: calc(100% - 1em) 50%,50% 100%;
-  background-size: 1em;
-  background-repeat: no-repeat;
-  padding-right: 3em;
-}
-
-/* Remove text focusring in firefox */
-select:-moz-focusring {
-  color: transparent;
-  text-shadow: 0 0 0 rgba(0,0,0,0.8);
-}
-
-/* Remove select element arrow in IE 10+ */
-select::-ms-expand {
-  display: none;
-}
-
-option {
-  background-color: #eee;
-  color: rgba(0,0,0,.8);
-}
-
-option:disabled {
-  color: rgba(0,0,0,.54);
-}
-
-.button {
-  display: inline-block;
-  text-align: center;
-  text-decoration: none;
-}
-
-.button,
-button {
-  background-color: #0d47a1;
-  border-color: #0d47a1;
-  border-radius: 4px;
-  color: #fff;
-}
-
-.button:hover,
-.button:focus,
-button:hover,
-button:focus {
-  background-color: #1565c0;
-  border-color: #1565c0;
-  cursor: pointer;
-}
-
-.button:hover,
-.button:focus,
-button:hover,
-button:focus,
-input:hover,
-input:focus,
-select:hover,
-select:focus {
-  -webkit-box-shadow: 0 0 0 4px rgba(33,150,243,.8);
-  box-shadow: 0 0 0 4px rgba(33,150,243,.8);
-}
-
-button:disabled,
-button:disabled:hover,
-button:disabled:focus {
-  background-color: #bdbdbd;
-  border-color: #bdbdbd;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  cursor: not-allowed;
 }
 
 /* NAVBAR */
@@ -439,9 +539,37 @@ button:disabled:focus {
   white-space: nowrap;
 }
 
+/* QUESTION */
+
 .question {
   max-width: 45em;
 }
+
+.question .card-avatar {
+  max-width: 50%;
+}
+
+.question .card-body {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.question .question-details {
+  margin: 0;
+  width: 100%;
+}
+
+.poll-or::after {
+  background-color: #fff;
+  content: 'OR';
+  padding: 0 .5em;
+  position: relative;
+  top: -.75em;
+}
+
+/* MEDIA QUERIES */
 
 @media (min-width: 640px) {
   .container {
@@ -496,6 +624,22 @@ button:disabled:focus {
 
   .questions-list li {
     margin: 1em;
+  }
+
+  .question .card-avatar {
+    max-width: 33%;
+  }
+
+  .question .card-body {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
+
+  .question .question-details {
+    margin-left: 1em;
+    width: auto;
   }
 }
 
