--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ a {
 hr {
   background-color: rgba(189,189,189,.8);
   border: none;
+  color: inherit;
   height: 1px;
   margin: 0;
   overflow: visible;
@@ -227,6 +228,44 @@ input[type=radio]:checked::before {
   border-color: rgba(27,94,32,.8);
 }
 
+/* METER */
+
+meter {
+  background: rgba(238,238,238,.8);
+  border-radius: .665em;
+  height: 1.33em;
+  overflow: hidden;
+  width: 100%;
+}
+
+meter::-webkit-meter-bar {
+  background: rgba(238,238,238,.8);
+}
+
+meter::-webkit-meter-optimum-value {
+  background: #4caf50;
+}
+
+meter::-webkit-meter-suboptimum-value {
+  background: #9e9e9e;
+}
+
+meter::-webkit-meter-even-less-good-value {
+  background: #f44336;
+}
+
+meter:-moz-meter-optimum::-moz-meter-bar {
+  background: #4caf50;
+}
+
+meter:-moz-meter-sub-optimum::-moz-meter-bar {
+  background: #9e9e9e;
+}
+
+meter:-moz-meter-sub-sub-optimum::-moz-meter-bar {
+  background: #f44336;
+}
+
 /* FORM UL LI */
 
 form ul {
@@ -363,6 +402,7 @@ small {
 /* MAIN */
 
 main {
+  background-color: #fafafa;
   min-height: 100vh;
   padding: 8.6em 0 2em;
 }
@@ -542,11 +582,12 @@ main {
 /* QUESTION */
 
 .question {
+  width: 100%;
   max-width: 45em;
 }
 
 .question .card-avatar {
-  max-width: 50%;
+  max-width: 66%;
 }
 
 .question .card-body {
@@ -561,12 +602,64 @@ main {
   width: 100%;
 }
 
-.poll-or::after {
+.poll-or::after,
+.results-or::after {
   background-color: #fff;
   content: 'OR';
   padding: 0 .5em;
   position: relative;
   top: -.75em;
+}
+
+/* QUESTION RESULTS */
+
+.question-results-subtitle {
+  font-size: .83em;
+  font-weight: 400;
+}
+
+label[for] {
+  display: inline-block;
+  margin-bottom: .33em;
+}
+
+figure {
+  margin: 0;
+}
+
+figcaption {
+  font-size: .83em;
+  font-style: italic;
+  text-align: right;
+  margin: .33em 0;
+}
+
+.question-results-title {
+  font-size: 1.5em;
+  margin: .83em 0;
+}
+
+.question figure {
+  position: relative;
+}
+
+.question figcaption {
+  margin-bottom: 0;
+}
+
+.results-or {
+  margin: 1em 0;
+}
+
+.your-vote {
+  background-color: rgba(0,0,0,.8);
+  border-radius: 1em;
+  color: #fff;
+  display: block;
+  font-size: .67em;
+  letter-spacing: 1em;
+  text-align: center;
+  text-indent: 1em;
 }
 
 /* MEDIA QUERIES */
@@ -640,6 +733,12 @@ main {
   .question .question-details {
     margin-left: 1em;
     width: auto;
+  }
+
+  .poll-title,
+  .question-preview,
+  .question-results-title {
+    margin-top: 0;
   }
 }
 
