--- a/src/index.css
+++ b/src/index.css
@@ -611,7 +611,8 @@ main {
   max-width: 45em;
 }
 
-.question .card-avatar {
+.question .card-avatar,
+.leader-card .card-avatar {
   max-width: 66%;
 }
 
@@ -697,6 +698,71 @@ figcaption {
 .new-poll-body-title {
   font-size: 1.17em;
   margin: 0 0 1em;
+}
+
+/* LEADER BOARD */
+
+.leaderboard {
+  list-style: none;
+  padding: 0;
+}
+
+.leaderboard > li {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 15em;
+  flex: 1 1 15em;
+  margin: .5em;
+  max-width: 30em;
+  text-align: center;
+  width: 100%;
+}
+
+.leaderboard > li:first-child {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 100%;
+  flex: 1 1 100%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  max-width: 100%;
+}
+
+.leader-card {
+  position: relative;
+}
+
+.score {
+  background-color: #4caf50;
+  border-radius: 50%;
+  color: #fff;
+  display: inline-block;
+  font-size: 1.5em;
+  height: 2.8rem;
+  margin: 0 auto;
+  line-height: 1.7;
+  width: 2.8rem;
+}
+
+.score-badge {
+  background-color: rgba(189,189,189,.4);
+  color: rgba(76,175,80,.8);
+  display: block;
+  left: -3em;
+  letter-spacing: .1em;
+  padding: 1.67em 2.5em .33em;
+  position: absolute;
+  top: -.6em;
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+.score-details {
+  letter-spacing: .1em;
+  text-indent: .1em;
 }
 
 /* ANIMATIONS */
@@ -800,6 +866,14 @@ figcaption {
   .question-preview,
   .question-results-title {
     margin-top: 0;
+  }
+
+  .leaderboard {
+    padding: 0;
+  }
+
+  .leaderboard li {
+    margin: 0 1em 2em;
   }
 }
 
